--- a/index.html
+++ b/index.html
@@ -9,21 +9,53 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
        <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="name-highlite">SOJIB</span> Website</h1>
+            <h1><span class="orange-highlite">SOJIB</span> Website</h1>
             <h3>World-class professional web developer</h3>
             <p>A Starting Point for New Web Applications with a Modern UI and SOLID Architecture. Layered, clean source code built on a strong base web app framework for asp net core. Chat Support Available. View Pricing Plans. Request A Demo. Benefits: UI Components, Setting System, Audit Logging.</p>
+
+            <a class="link-button" target="-blank" href="https://www.fiverr.com/mdsojibmiah401?up_rollout=true">HIRE ME</a>
+
        </div>
  
       <div class="half-width">
-        <img src="images/profile.png" alt="">
-      </div>
 
+            <img src="images/profile.png" alt="">
+      </div>
+    </section>
+
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/profille2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h3>Become World's No 1 Developer</h3>
+            <p>As a young child, my dream occupation was to dig up dinosaurs. As I grew older and my interests changed, my dream profession changed also. Although most of these dreams were not very long lived, one occupational dream has outlasted all others, and has finally emerged as the dream I passionately pursue.</p>
+            <a class="link-button" target="-blank" href="https://www.facebook.com/sojib.hossen.104">Visit My facebook</a>
+        </div>
+    </section>
+    <section class="area">
+        <h2 class="new">Experinces</h2>
+        <div id="for" class="half-width single-experience">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="orange-highlite">2021- Present |  Pro level Web Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything  needed to make a website funtion, efficient. I didn't stop with the web. I went  beyond with most popular Javascript framework called Vue JS. I even know the  deployment, server and security. I will give you 100% web solution</p>
+        </div>
+
+        <div class="half-width single-experience">
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange-highlite">2020-2021 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed  it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
 
 
     </section>
+    <footer>
+        <p>© Sojib 2021, all right resrved</p>
+    </footer>
     
 </body>
 </html>
